fixed uploaded profile and head image loading animation not showing

--- a/resources/sass/elements/_preview.scss
+++ b/resources/sass/elements/_preview.scss
@@ -1,4 +1,4 @@
-#links_page .links_col {
+.links_col {
 
     &.preview {
         background: url('/images/preview-device-bg.png') no-repeat;
